--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         tools:layout_editor_absoluteX="13dp"
         tools:layout_editor_absoluteY="368dp">
 
+        <TextView
+            android:id="@+id/player_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,6 +62,12 @@
             android:layout_height="wrap_content"
             android:text="BUY" />
 
+        <Button
+            android:id="@+id/end_turn_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="END TURN" />
+
         <TextView
             android:id="@+id/raha"
             android:layout_width="wrap_content"
@@ -71,7 +83,15 @@
         <ListView
             android:id="@+id/hotels_to_buy"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+        </ListView>
+
+        <TextView
+            android:id="@+id/eventsText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
 
     </LinearLayout>
 
