--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,98 +7,125 @@
     tools:context=".MainActivity"
     android:background="@drawable/lauta1_smaller_jpg">
 
-    <LinearLayout
-        android:id="@+id/verticalLayout"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="368dp">
+        android:clickable="false"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/player_tv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#BBBBBB"
+            android:textSize="12sp"
+            android:layout_marginRight="20dp"
             android:text="TextView" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/noppa_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:text="ROLL" />
-
-            <TextView
-                android:id="@+id/noppa_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="" />
-
-            <ImageView
-                android:id="@+id/noppa_imageview"
-                android:layout_width="142dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/dice1" />
-
-            <TextView
-                android:id="@+id/ruutu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="" />
-
-            <Button
-                android:id="@+id/end_turn_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="END TURN" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/build_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BUILD" />
-
-        <Button
-            android:id="@+id/buy_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BUY" />
 
         <TextView
             android:id="@+id/raha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/player_tv"
+            android:textSize="12sp"
+            android:background="#BBBBBB"
             android:text="" />
+
+        <ImageView
+            android:id="@+id/noppa_imageview"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/dice1" />
+
+        <Button
+            android:id="@+id/end_turn_button"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="35sp"
+            android:textSize="12sp"
+            android:gravity="end"
+            android:text="END TURN" />
+
+        <Button
+            android:id="@+id/build_button"
+            android:layout_width="60sp"
+            android:layout_height="35sp"
+            android:textSize="12sp"
+            android:layout_below="@+id/player_tv"
+            android:text="BUILD" />
+
+        <Button
+            android:id="@+id/buy_button"
+            android:layout_width="60sp"
+            android:layout_height="35sp"
+            android:textSize="12sp"
+            android:layout_below="@+id/build_button"
+            android:text="BUY" />
 
         <TextView
             android:id="@+id/tieto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/buy_button"
+            android:text=""
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/ruutu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_below="@+id/tieto"
             android:text="" />
 
         <ListView
             android:id="@+id/hotels_to_buy"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:visibility="gone">
 
         </ListView>
 
         <TextView
             android:id="@+id/eventsText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:visibility="gone"/>
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/car_imageview"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/car_smaller_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/car2_imageview"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/car3_png2"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/boomerang_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/fujiyama_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
