Add info, buy and build icons and some functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,14 +74,6 @@
             android:text=""
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/ruutu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/tieto"
-            android:text="" />
-
         <ListView
             android:id="@+id/hotels_to_buy"
             android:layout_width="match_parent"
@@ -116,15 +108,169 @@
             android:id="@+id/boomerang_info"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/info_small"
+            android:src="@drawable/info_small_png"
             android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/boomerang_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/boomerang_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
 
         <ImageView
             android:id="@+id/fujiyama_info"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/info_small"
+            android:src="@drawable/info_small_png"
             android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/fujiyama_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/fujiyama_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/president_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/president_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/president_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/royal_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/royal_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/royal_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/waikiki_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/waikiki_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/waikiki_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/letoile_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/letoile_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/letoile_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/tajmahal_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/tajmahal_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/tajmahal_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/safari_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/info_small_png"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/safari_buy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/buy_png"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/safari_build"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/building"
+            android:visibility="visible" />
 
     </RelativeLayout>
 
